example1/2-nginx-rolling-update.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "image updated to 1.17"
  name: nginx-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-pod
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 7
  template:
    metadata:
      labels:
        name: nginx-pod
    spec:
      containers:
      - name: nginx-container
        image: nginx:1.17
